--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1116,6 +1116,10 @@ const BookTagIcons = {
   'EquinoxRewards': '/assets/EquinoxIcon.svg',
 };
 
+const tooltipText =
+  IconAltText_BOOK[tag] ||
+  tag;
+
 const IconAltText_BOOK = {
   BullionVendor: "Sold by a Gold Bullion vendor",
   StampsVendor: "Sold by Giuseppe in The Whitespring",
@@ -1128,7 +1132,7 @@ const IconAltText_BOOK = {
   MischiefNightRewards: "Reward from Mischief Night seasonal event",
   SpookyScorched: "Reward from Spooky Scorched seasonal event",
   PublicEventRewards: "Reward from a Public event",
-  EquinoxRewards: "Reward from Mothman Equinox seasonal event"
+  EquinoxRewards: "Reward from Mothman Equinox seasonal event",
 };
 
 const IconAltText_ENTM = {
@@ -1142,7 +1146,7 @@ const IconAltText_ENTM = {
 
   // fallbacks
   ATX: "Atomic Shop Item",
-  SCORE: "Seasons Reward"
+  SCORE: "Seasons Reward",
 };
 
 
