--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -737,6 +737,7 @@
   padding: 6px 10px;
   border-radius: 4px;
   font-size: 13px;
+  border: 1px solid var(--accent-color);
   opacity: 0;
   pointer-events: none;
   transform: translateY(-4px);
