--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -750,6 +750,29 @@
   transform: translateY(0);
 }
 
+#mobileTooltip {
+  position: fixed;
+  bottom: -80px;         
+  left: 50%;
+  transform: translateX(-50%);
+  max-width: 90%;
+  background: #1a1a1a;
+  color: white;
+  padding: 12px 16px;
+  border-radius: 6px;
+  font-size: 14px;
+  z-index: 99999;
+  opacity: 0;
+  transition: all 0.3s ease;
+  pointer-events: none;
+
+  /* optional accent border */
+  border: 1px solid var(--accent-color);
+}
+#mobileTooltip.show {
+  bottom: 20px; 
+  opacity: 1;
+}
 
 
   @media (max-width: 600px) {
@@ -1071,6 +1094,20 @@ function createTooltipElement(text) {
   return t;
 }
 
+let mobileTooltipTimeout = null;
+
+function showMobileTooltip(text) {
+  const m = document.getElementById('mobileTooltip');
+  m.textContent = text;
+
+  m.classList.add('show');
+
+  clearTimeout(mobileTooltipTimeout);
+  mobileTooltipTimeout = setTimeout(() => {
+    m.classList.remove('show');
+  }, 5000); // auto-hide after 5 seconds
+}
+
 function attachTooltipToIcon(icon, tooltip) {
   function show() {
     const rect = icon.getBoundingClientRect();
@@ -1089,15 +1126,22 @@ function attachTooltipToIcon(icon, tooltip) {
   icon.addEventListener('mouseenter', show);
   icon.addEventListener('mouseleave', hide);
 
-  // mobile tap
-  icon.addEventListener('click', (e) => {
-    e.stopPropagation();
-    if (tooltip.classList.contains('show')) hide();
-    else show();
-  });
+  // mobile
+ icon.addEventListener('click', (e) => {
+  e.stopPropagation();
 
-  // close when clicking elsewhere
-  document.addEventListener('click', hide);
+  // If viewport width is small → treat as mobile
+  if (window.innerWidth < 768) {
+    const text = tooltip.textContent;
+    showMobileTooltip(text);
+    return;
+  }
+
+  // Desktop fallback (normal tooltip)
+  if (tooltip.classList.contains('show')) hide();
+  else show();
+});
+
 }
 
 
