--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -737,7 +737,7 @@
   padding: 6px 10px;
   border-radius: 4px;
   font-size: 13px;
-  border: 1px solid var(--accent-color);
+  border: 1px solid var(--accent);
   opacity: 0;
   pointer-events: none;
   transform: translateY(-4px);
@@ -766,8 +766,7 @@
   transition: all 0.3s ease;
   pointer-events: none;
 
-  /* optional accent border */
-  border: 1px solid var(--accent-color);
+  border: 2px solid var(--accent);
 }
 #mobileTooltip.show {
   bottom: 20px; 
