--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1558,6 +1558,42 @@ function renderResults(query) {
     const right = document.createElement('div');
     right.className = 'result-right';
 
+    function showMobilePopup(text) {
+  let box = document.getElementById('mobile-tooltip-box');
+
+  if (!box) {
+    box = document.createElement('div');
+    box.id = 'mobile-tooltip-box';
+
+    box.style.position = 'fixed';
+    box.style.bottom = '20px';
+    box.style.left = '50%';
+    box.style.transform = 'translateX(-50%)';
+    box.style.maxWidth = '90%';
+    box.style.padding = '12px 16px';
+    box.style.background = 'rgba(0,0,0,0.85)';
+    box.style.color = 'white';
+    box.style.fontSize = '14px';
+    box.style.borderRadius = '10px';
+    box.style.zIndex = '9999';
+    box.style.textAlign = 'center';
+    box.style.pointerEvents = 'none';
+    box.style.opacity = '0';
+    box.style.transition = 'opacity 0.25s';
+
+    document.body.appendChild(box);
+  }
+
+  box.textContent = text;
+  box.style.opacity = '1';
+
+  setTimeout(() => {
+    box.style.opacity = '0';
+  }, 5000);
+}
+
+
+
     // --- Build Menu Category header + pills ---
     if ((r.Category && r.Category.trim() !== '') || (r.SubCategory && r.SubCategory.trim() !== '')) {
       const catHeader = document.createElement('div');
