--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -732,7 +732,7 @@
 
 .tooltip {
   position: fixed;
-  background: var(--accent-dim);
+  background: var(--card-bg);
   color: #fff;
   padding: 6px 10px;
   border-radius: 4px;
@@ -756,7 +756,7 @@
   left: 50%;
   transform: translateX(-50%);
   max-width: 90%;
-  background: #1a1a1a;
+  background: var(--card-bg);
   color: white;
   padding: 12px 16px;
   border-radius: 6px;
