--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -750,7 +750,7 @@
   transform: translateY(0);
 }
 
-#mobileTooltip {
+.mobileTooltip {
   position: fixed;
   bottom: -80px;         
   left: 50%;
@@ -767,7 +767,7 @@
   pointer-events: none;
   border: 2px solid var(--accent);
 }
-#mobileTooltip.show {
+.mobileTooltip.show {
   bottom: 20px; 
   opacity: 1;
 }
