--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1092,22 +1092,9 @@ function createTooltipElement(text) {
   return t;
 }
 
-let mobileTooltipTimeout = null;
-
-function showMobileTooltip(text) {
-  const m = document.getElementById('mobileTooltip');
-  m.textContent = text;
-
-  m.classList.add('show');
-
-  clearTimeout(mobileTooltipTimeout);
-  mobileTooltipTimeout = setTimeout(() => {
-    m.classList.remove('show');
-  }, 5000); // auto-hide after 5 seconds
-}
+let mobileTooltipTimeout = null; // for resetting hide timer
 
 function attachTooltipToIcon(icon, text) {
-  // detect touch device
   const isTouch = 'ontouchstart' in window || navigator.maxTouchPoints > 0;
 
   if (!isTouch) {
@@ -1119,7 +1106,7 @@ function attachTooltipToIcon(icon, text) {
       const w = desktopTooltip.offsetWidth;
       const h = desktopTooltip.offsetHeight;
       desktopTooltip.style.left = `${rect.left + rect.width / 2 - w / 2}px`;
-      desktopTooltip.style.top = `${rect.top - h - 6}px`;
+      desktopTooltip.style.top  = `${rect.top - h - 6}px`;
       desktopTooltip.classList.add('show');
     }
 
@@ -1139,36 +1126,21 @@ function attachTooltipToIcon(icon, text) {
       if (!box) {
         box = document.createElement('div');
         box.id = 'mobile-tooltip-box';
-        box.style.position = 'fixed';
-        box.style.bottom = '20px';
-        box.style.left = '50%';
-        box.style.transform = 'translateX(-50%)';
-        box.style.maxWidth = '90%';
-        box.style.padding = '12px 16px';
-        box.style.background = 'rgba(0,0,0,0.85)';
-        box.style.color = 'white';
-        box.style.fontSize = '14px';
-        box.style.borderRadius = '10px';
-        box.style.zIndex = '9999';
-        box.style.textAlign = 'center';
-        box.style.pointerEvents = 'none';
-        box.style.opacity = '0';
-        box.style.transition = 'opacity 0.25s';
+        box.className = 'mobileTooltip'; // apply CSS class
         document.body.appendChild(box);
       }
 
       box.textContent = text;
-      box.style.opacity = '1';
+      box.classList.add('show');
 
-      // hide after 2 seconds
-      setTimeout(() => {
-        box.style.opacity = '0';
-      }, 2000);
+      // reset hide timer if already running
+      if (mobileTooltipTimeout) clearTimeout(mobileTooltipTimeout);
+      mobileTooltipTimeout = setTimeout(() => {
+        box.classList.remove('show');
+      }, 5000);
     });
   }
 }
-
-
 
 // Icons driven by BOOK_SOURCE_TAG values
 const BookTagIcons = {
@@ -1583,41 +1555,6 @@ function renderResults(query) {
 
     const right = document.createElement('div');
     right.className = 'result-right';
-
-    function showMobilePopup(text) {
-  let box = document.getElementById('mobile-tooltip-box');
-
-  if (!box) {
-    box = document.createElement('div');
-    box.id = 'mobile-tooltip-box';
-
-    box.style.position = 'fixed';
-    box.style.bottom = '20px';
-    box.style.left = '50%';
-    box.style.transform = 'translateX(-50%)';
-    box.style.maxWidth = '90%';
-    box.style.padding = '12px 16px';
-    box.style.background = 'rgba(0,0,0,0.85)';
-    box.style.color = 'white';
-    box.style.fontSize = '14px';
-    box.style.borderRadius = '10px';
-    box.style.zIndex = '9999';
-    box.style.textAlign = 'center';
-    box.style.pointerEvents = 'none';
-    box.style.opacity = '0';
-    box.style.transition = 'opacity 0.25s';
-
-    document.body.appendChild(box);
-  }
-
-  box.textContent = text;
-  box.style.opacity = '1';
-
-  setTimeout(() => {
-    box.style.opacity = '0';
-  }, 5000);
-}
-
 
 
     // --- Build Menu Category header + pills ---
