--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -756,7 +756,7 @@
   left: 50%;
   transform: translateX(-50%);
   max-width: 90%;
-  background: var(--bg);
+  background: var(--card-bg);
   color: white;
   padding: 12px 16px;
   border-radius: 6px;
