--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1173,7 +1173,7 @@ const IconAltText_BOOK = {
   TreasureHunters: "Treasure Hunters Event Reward",
   MeatWeekRewards: "Meat Week Seasonal Event Reward",
   FasnachtRewards: "Fasnacht Seasonal Event Reward",
-  MischiefNightRewards: "RMischief Night Seasonal Event Reward",
+  MischiefNightRewards: "Mischief Night Seasonal Event Reward",
   SpookyScorched: "Spooky Scorched Seasonal Event Reward",
   PublicEventRewards: "Public Event Reward",
   EquinoxRewards: "Mothman Equinox Seasonal Event Reward",
