--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -1203,13 +1203,13 @@ function getTooltipText_ENTM(edid, fullName) {
 
 
 const IconAltText_ENTM = {
-  "F1_ENTM_CAMP_SCRAPBOX_STANDARD": "Requires Fallout 1st subscription",
-  "F1_ENTM_CAMP_AMMOSTORAGEBOX_STANDARD": "Requires Fallout 1st subscription",
-  "F1_ENTM_CAMP_AIDBOX_STANDARD": "Requires Fallout 1st subscription",
+  "F1_ENTM_CAMP_SCRAPBOX_STANDARD": "Requires Fallout 1st Subscription",
+  "F1_ENTM_CAMP_AMMOSTORAGEBOX_STANDARD": "Requires Fallout 1st Subscription",
+  "F1_ENTM_CAMP_AIDBOX_STANDARD": "Requires Fallout 1st Subscription",
 
   // manual EDID prefix mappings
-  BABYLON_: "Nuclear Winter reward",
-  SHELTERS_: "Atomic Shop item",
+  BABYLON_: "Nuclear Winter Reward",
+  SHELTERS_: "Atomic Shop Item",
 
   // fallbacks
   ATX: "Atomic Shop Item",
