--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -976,7 +976,7 @@ let activeFilters = new Set()
 const CategoryIcons = {
   'Quest': '/assets/MainCategory-QuestsIcon.svg',
   'Objectives': '/assets/MainCategory-QuestsIcon.svg',
-  'Modify': 'MainCategory-ModifyIcon.svg',
+  'Modify': '/assets/MainCategory-ModifyIcon.svg',
   'Wallpapers': '/assets/MainCategory-WallpapersIcon.svg',
   'C.A.M.P. Pieces': '/assets/MainCategory-CAMPPiecesIcon.svg',
   'Foundations': '/assets/SubCategory-FoundationsIcon.png',
