--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -76,6 +76,8 @@
 
   #pagination button {
     padding: 10px 10px;
+    margin-left: 6px;
+    margin-left: 6px;
     background: var(--card-bg);
     color: var(--text);
     border: 2px solid var(--accent);
