--- a/CAMPCategorySearch-Experimental/Index.html
+++ b/CAMPCategorySearch-Experimental/Index.html
@@ -8,8 +8,8 @@
   <meta property="og:image" content="https://raw.githubusercontent.com/MrsBlobby/mrsblobby.github.io/refs/heads/main/assets/CAMPIcon2.png">
   <meta property="og:url" content="https://yourdomain.com/">
   <meta property="og:type" content="website">
-  <link rel="icon" type="image/png" sizes="32x32" href="/assets/svg/CAMPIcon2.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/assets/svg/CAMPIcon2.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/CAMPIcon2.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/CAMPIcon2.png">
   <title>Fallout 76 C.A.M.P. Item Database</title>
  <style>
   :root {
